修復電腦玩家自動出牌和遊戲輪換邏輯
- 實現電腦玩家自動出牌功能
- 修復遊戲輪換邏輯，確保電腦玩家出牌後正確輪換
- 添加UI顯示所有玩家手牌數量和當前玩家
- 修復按鈕狀態管理，電腦玩家回合時禁用人類玩家按鈕
- 添加詳細的調試信息
- 實現特殊牌效果處理（Skip、DrawTwo、WildDrawFour等）
- 隨機選擇第一個玩家
- 修復萬能牌顏色選擇後的輪換邏輯

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "godot.csharp.executablePath": "D:\\Godot\\Godot_v4.4.1-stable_mono_win64\\Godot_v4.4.1-stable_mono_win64\\Godot_v4.4.1-stable_mono_win64.exe",
     "godot.csharp.projectPath": "${workspaceFolder}",
-    "dotnet.defaultSolution": "BeatemUpGame.sln"
+    "dotnet.defaultSolution": "BeatemUpGame.sln",
+    "godotTools.editorPath.godot4": "d:\\Godot\\Godot_v4.4.1-stable_mono_win64\\Godot_v4.4.1-stable_mono_win64\\Godot_v4.4.1-stable_mono_win64.exe"
 } 
